handle nullptr return of screenAt()

avoid crash if point is out of range

BUG: 439804


(cherry picked from commit 615c62a7f09b79cd21ea54f1cfcb90ebc8e266f1)